--- a/mc.html
+++ b/mc.html
@@ -5,10 +5,11 @@
 
 
 <script>
-document.location.href = 'https://eelisa.systeme.io/proxy/request/519002eb958cee631731385c211ed2ed47ca7' + window.location.pathname.substring(1);
+document.location.href = 'https://eelisa.systeme.io/proxy/request/519002eb958cee631731385c211ed2ed47ca7'
 	
 </script>
 
 
 </body>
+
 </html>
