--- a/mc.html
+++ b/mc.html
@@ -5,7 +5,7 @@
 
 
 <script>
-document.location.href = 'https://eelisa.systeme.io/proxy/request/519002eb958cee631731385c211ed2ed47ca7' +window.location.href.split('?')[1];
+document.location.href = 'https://eelisa.systeme.io/proxy/request/519002eb958cee631731385c211ed2ed47ca7' +window.location.href.split('/')[1];
 	
 </script>
 
@@ -13,4 +13,5 @@ document.location.href = 'https://eelisa.systeme.io/proxy/request/519002eb958cee
 </body>
 
 </html>
+
 
